--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,32 @@
         /* font-family:"Tahoma",sans-serif; */
         /* font-family:"Source Sans Pro",sans-serif; */
         /* font-family:"Georgia",sans-serif; */
+        /* font-family:"FreeSans",sans-serif; */
         font-family:"Open Sans",sans-serif;
-        background-color: #e0e8ff;
+        /* background-color: #d0e0f8; */
+        
+        background-image: url('images/dark-cubes-texture.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100% 100%;
+        /* margin: 30px; */
+        margin: 0;
+    }
+    .top-container {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+        background-color: #105090;
+        padding: 10px;
+    }
+    /* .margin-left */
+    .container {
+        /* margin-left: 30px; Sesuaikan dengan nilai yang diinginkan */
+        /* margin:0 auto; */
+        margin:0 auto; /* this will center the page */
+        width:80%; /*  use your width here */
+        background-color: #d0e0f8;
+        padding: 0 20px;
     }
     p {
         font-size: 20px
@@ -36,7 +60,7 @@
     }
 
     /* .margin-left */
-    .container {
+    .container2 {
         margin-left: 30px; /* Sesuaikan dengan nilai yang diinginkan */
     }
 
@@ -58,21 +82,17 @@
 
 </style>
 <body>
-    <!-- <font face="Open Sans Black" size="6" color="#002080"><b>BLOG DAN CERITA</b></font> -->
-    <font id="home" size="7" color="#146480"><b>Blog dan Cerita</b></font>
-    <p style="font-size: 22px">
-        Cerita dan pengalaman saya yang pernah dirasakan.<br>
-        Dari masa lalu hingga kini, semua cerita sudah menjadi hal yang berharga.<br>
-        Inilah beberapa cerita yang ada di blog ini.
-    </p>
-    </details>
-    <p style="font-size: 25px"><b>1. Holiday to Bromo</b></p>
+    <div class="top-container">
+        <font size="6" color="white"><b>SEBUAH WEBSITE</b></font>
+    </div>
     <div class="container">
-        <p>
-        Dengan tulisan bahasa Inggris
-        <br><br>
-        In June 2018, my family and I went on vacation to <b>East Java</b>.
         <br>
+        <!-- <font face="Open Sans Black" size="6" color="#002080"><b>BLOG DAN CERITA</b></font> -->
+        <font id="home" size="7" color="#146480"><b>Blog dan Cerita</b></font>
+        <p style="font-size: 22px">
+            Cerita dan pengalaman saya yang pernah dirasakan.<br>
+            Dari masa lalu hingga kini, semua cerita sudah menjadi hal yang berharga.<br>
+            Inilah beberapa cerita yang ada di blog ini.
         </p>
         <div class="image">
             <img src="images/IMG_6228.JPG" width="300">
@@ -81,105 +101,117 @@
                 <summary>Klik disini</summary>
             </details> -->
         </div>
-        <!-- <div class="text"> -->
-        <p>
-        <font color="#000080">
-        Gambar 1: Pegunungan
-        <br>
-        Gambar 2: Matahari terbit
-        </font>
-        <br><br>
-        First, we departed from <font color="#008000">Semarang</font> to <b>Batu Malang</b> by car. Arriving there, we immediately rested at the hotel for a while and went to eat at the <b>Batu Malang</b> square.
-        The next day we went to Jawa Timur Park 3, the place is nice and there are lots of interesting photo spots there.
-        Miniatures of Japanese cities, Dutch cities, India and many more. After that we returned to the hotel to rest for a while because at dawn we had to prepare for Bromo.
-        At 1 am we got up and got ready to go by jeep. We had to get up very early because we had to catch the sunrise.
-        The trip from the hotel to Bromo is quite far and takes as much as …. o'clock. We got there at exactly 4am and the weather was very, very cold.
-        Our first destination was the Peak of Mount Bromo. The view is amazing, I can see 3 Bromo mountains and the sunrise. After that, we went to the next destination, namely Whispering Sand.
-        There we took a lot of photos. And our last destination is Teletubbies Hill. When it was noon we went back to town and had lunch there.
-        <br><br>
-        Actually my family and I were very tired because of the trip but the beautiful scenery we saw was really worth it. It's an unforgettable experience.
-        <br><br>
-        After walking for a while and buying souvenirs in the city of Malang, we returned to Semarang.
-        <br><br>
-        <b>Catatan:</b><br>
-        <!-- <ul><li> -->
-        - Batu Malang: Kota di Jawa Timur<br>
-        - Kata Coach di Eagle School, nanti akan berencana untuk retreat ke luar kota, dimana nanti akan pergi ke <b>Batu Malang</b>.
-        </p>
-        <br>
-    </div>
-    <p style="font-size: 25px"><b>2. About Me Devan - Descriptive Text</b></p>
-    <div class="container">
-        <p>
-        Dengan tulisan bahasa Inggris
-        <br><br>
-        <b>Judul: About Me Devan</b>
-        <br><br>
-        My name is Devan. I am senior high school. I like Math Computer and music.
-        <br><br>
-        The subject I like the most is Mathematics. Since I was a kid, my math scores were the highest compared to the other subjects.
-        I have participated in many competitions. Competitions between schools, at the Mall, school's Open House and at the Olympic level.
-        Sometimes I win, sometimes I don't. The championship that was most memorable for me when I was in grade 5 elementary school, for the OSN level, I entered the semifinals;
-        and recently I won Olympic gold at the provincial level of Central Java and Jogja. This further broadens my horizons,
-        further motivates me to be even more active and diligent in practicing and participating in various competitions in order to improve my mathematical abilities.
-        <br><br>
-        Beside Math, I also like computer programs, namely python. Moreover, at Eagle School there is an IT talent class.
-        There I can apply my hobby regarding this computer program. I started making math programs. And those are my projects in the IT talent class.
-        Python is a coding programming language. Coding is very necessary and important in today's IT field. Everything uses coding.
-        For that, I really want to deepen my knowledge of coding, such as Python, HTML, and Javascript. Because later it will be needed now and in the future.
-        In the future, I will make projects other than math, such as my own portfolio and web.
-        <br><Br>
-        Apart from mathematics and IT, I also like to play piano. I have been taking piano lessons for 3 years. Several times from my piano lessons,
-        I held small concerts at the Semarang mall. This is one that made me bolder and memorize some of the songs I played. In my spare time at home,
-        I often play songs taught in piano lessons.
-        <br><br>
-        My hope is I would like to take part in competitions in mathematics, both at the city and national levels during my 3 years at this high school.
-        And also continue to deepen the capabilities of the Python program. Because at this time, Mathematics and python are related to each other.
-        My dream is to be a mathematician and programmer. Hopefully with the talent that God has given me, I can develop it with effort and of course only with God's help.            
-        <br><br>
-        Video: <a href="https://youtu.be/AeSeyrThOVs">About Me Devan</a>
-        </p>
-        <br>
-    </div>
-    <p style="font-size: 25px"><b>3. Memenangkan Lomba Besar</b></p>
-    <div class="container">
-        <div class="image">
-            <img src="images/Sertifikat OSN.jpg" width="200">
-            <img src="images/Devan OSN 23.jpg" width="250">
+        </details>
+        <p style="font-size: 25px"><b>1. Holiday to Bromo</b></p>
+        <div class="container2">
+            <p>
+            Dengan tulisan bahasa Inggris
+            <br><br>
+            In June 2018, my family and I went on vacation to <b>East Java</b>.
+            <br>
+            </p>
+            
+            <!-- <div class="text"> -->
+            <p>
+            <font color="#000080">
+            Gambar 1: Pegunungan
+            <br>
+            Gambar 2: Matahari terbit
+            </font>
+            <br><br>
+            First, we departed from <font color="#008000">Semarang</font> to <b>Batu Malang</b> by car. Arriving there, we immediately rested at the hotel for a while and went to eat at the <b>Batu Malang</b> square.
+            The next day we went to Jawa Timur Park 3, the place is nice and there are lots of interesting photo spots there.
+            Miniatures of Japanese cities, Dutch cities, India and many more. After that we returned to the hotel to rest for a while because at dawn we had to prepare for Bromo.
+            At 1 am we got up and got ready to go by jeep. We had to get up very early because we had to catch the sunrise.
+            The trip from the hotel to Bromo is quite far and takes as much as …. o'clock. We got there at exactly 4am and the weather was very, very cold.
+            Our first destination was the Peak of Mount Bromo. The view is amazing, I can see 3 Bromo mountains and the sunrise. After that, we went to the next destination, namely Whispering Sand.
+            There we took a lot of photos. And our last destination is Teletubbies Hill. When it was noon we went back to town and had lunch there.
+            <br><br>
+            Actually my family and I were very tired because of the trip but the beautiful scenery we saw was really worth it. It's an unforgettable experience.
+            <br><br>
+            After walking for a while and buying souvenirs in the city of Malang, we returned to Semarang.
+            <br><br>
+            <b>Catatan:</b><br>
+            <!-- <ul><li> -->
+            - Batu Malang: Kota di Jawa Timur<br>
+            - Kata Coach di Eagle School, nanti akan berencana untuk retreat ke luar kota, dimana nanti akan pergi ke <b>Batu Malang</b>.
+            </p>
+            <br>
         </div>
-        <p>
-        Mata pelajaran yang paling saya sukai adalah Matematika. Sejak dari kecil nilai matematika saya yang paling tinggi dibanding mata pelajaran lain.
-        Banyak lomba yang sudah saya ikuti. Lomba antar sekolah baik itu di Mall, Open House Sekolah maupun tingkat Olimpiade. Kadang saya dapat juara terkadang juga tidak.
-        Itulah mengapa rajin les matematika sama guru matematika, agar semakin rajin dan giat belajar, sehingga bisa mendapatkan juara untuk berikutnya.
-        Kejuaraan yang paling berkesan buat saya, ketika SD kelas 5, untuk tingkat OSN, saya masuk semifinal; dan baru-baru ini, di bulan Maret 2023 saya mendapat emas Olimpiade tingkat provinsi Jawa Tengah dan Jogja.
-        Dan mendapatkan piagam dan medali emas, juara di tingkat emas bareng Guru Matematika disampingnya, sehingga akan difoto dan dikirim ke Instagram.
-        Hal itu, makin menambah wawasan saya, semakin memacu saya untuk lebih giat dan tekun lagi latihan dan mengikuti berbagai kompetisi supaya dapat meningkatkan kemampuan matematika saya.
-        </p>
+        <p style="font-size: 25px"><b>2. About Me Devan - Descriptive Text</b></p>
+        <div class="container2">
+            <p>
+            Dengan tulisan bahasa Inggris
+            <br><br>
+            <b>Judul: About Me Devan</b>
+            <br><br>
+            My name is Devan. I am senior high school. I like Math Computer and music.
+            <br><br>
+            The subject I like the most is Mathematics. Since I was a kid, my math scores were the highest compared to the other subjects.
+            I have participated in many competitions. Competitions between schools, at the Mall, school's Open House and at the Olympic level.
+            Sometimes I win, sometimes I don't. The championship that was most memorable for me when I was in grade 5 elementary school, for the OSN level, I entered the semifinals;
+            and recently I won Olympic gold at the provincial level of Central Java and Jogja. This further broadens my horizons,
+            further motivates me to be even more active and diligent in practicing and participating in various competitions in order to improve my mathematical abilities.
+            <br><br>
+            Beside Math, I also like computer programs, namely python. Moreover, at Eagle School there is an IT talent class.
+            There I can apply my hobby regarding this computer program. I started making math programs. And those are my projects in the IT talent class.
+            Python is a coding programming language. Coding is very necessary and important in today's IT field. Everything uses coding.
+            For that, I really want to deepen my knowledge of coding, such as Python, HTML, and Javascript. Because later it will be needed now and in the future.
+            In the future, I will make projects other than math, such as my own portfolio and web.
+            <br><Br>
+            Apart from mathematics and IT, I also like to play piano. I have been taking piano lessons for 3 years. Several times from my piano lessons,
+            I held small concerts at the Semarang mall. This is one that made me bolder and memorize some of the songs I played. In my spare time at home,
+            I often play songs taught in piano lessons.
+            <br><br>
+            My hope is I would like to take part in competitions in mathematics, both at the city and national levels during my 3 years at this high school.
+            And also continue to deepen the capabilities of the Python program. Because at this time, Mathematics and python are related to each other.
+            My dream is to be a mathematician and programmer. Hopefully with the talent that God has given me, I can develop it with effort and of course only with God's help.            
+            <br><br>
+            Video: <a href="https://youtu.be/AeSeyrThOVs">About Me Devan</a>
+            </p>
+            <br>
+        </div>
+        <p style="font-size: 25px"><b>3. Memenangkan Lomba Besar</b></p>
+        <div class="container2">
+            <div class="image">
+                <img src="images/Sertifikat OSN.jpg" width="200">
+                <img src="images/Devan OSN 23.jpg" width="250">
+            </div>
+            <p>
+            Mata pelajaran yang paling saya sukai adalah Matematika. Sejak dari kecil nilai matematika saya yang paling tinggi dibanding mata pelajaran lain.
+            Banyak lomba yang sudah saya ikuti. Lomba antar sekolah baik itu di Mall, Open House Sekolah maupun tingkat Olimpiade. Kadang saya dapat juara terkadang juga tidak.
+            Itulah mengapa rajin les matematika sama guru matematika, agar semakin rajin dan giat belajar, sehingga bisa mendapatkan juara untuk berikutnya.
+            Kejuaraan yang paling berkesan buat saya, ketika SD kelas 5, untuk tingkat OSN, saya masuk semifinal; dan baru-baru ini, di bulan Maret 2023 saya mendapat emas Olimpiade tingkat provinsi Jawa Tengah dan Jogja.
+            Dan mendapatkan piagam dan medali emas, juara di tingkat emas bareng Guru Matematika disampingnya, sehingga akan difoto dan dikirim ke Instagram.
+            Hal itu, makin menambah wawasan saya, semakin memacu saya untuk lebih giat dan tekun lagi latihan dan mengikuti berbagai kompetisi supaya dapat meningkatkan kemampuan matematika saya.
+            </p>
+            <br>
+        </div>
+        <p style="font-size: 25px"><b>4. Holiday to Bali</b></p>
+        <p style="font-size: 25px"><b>5. Holiday to Jakarta & Bandung</b></p>
+        <p style="font-size: 25px"><b>6. Cerita tentang Talent</b></p>
+        <p style="font-size: 25px"><b>7. Masa depan dan impian</b></p>
+        <p style="font-size: 25px"><b>8. [Under Construction]</b></p>
+        <br>
+        <p style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+        <div class="box">
+            <p>
+            Link halaman:<br>
+            <!-- <b>Home</b> -->
+            <a href="index.html">Home</a> |
+            <a href="profil.html">Profil</a> |
+            <b>Blog</b> |
+            <a href="fakta.html">Fakta</a> |
+            <a href="about.html">About</a> |
+            Timeline (Coming Soon)
+            </p>
+        </div>
+        <!-- <p>Kembali ke: <a href="index.html">Menu Utama</a></p> -->
+        <p>[Coming Soon]</p>
+        <br>
+        <a href="#home">Kembali ke awal</a>
+        <p>Terakhir diupdate: 25 Agustus 2023</p>
         <br>
     </div>
-    <p style="font-size: 25px"><b>4. Holiday to Bali</b></p>
-    <p style="font-size: 25px"><b>5. Holiday to Jakarta & Bandung</b></p>
-    <p style="font-size: 25px"><b>6. Cerita tentang Talent</b></p>
-    <p style="font-size: 25px"><b>7. Masa depan dan impian</b></p>
-    <p style="font-size: 25px"><b>8. [Under Construction]</b></p>
-    <br>
-    <p style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
-    <div class="box">
-        <p>
-        Link halaman:<br>
-        <!-- <b>Home</b> -->
-        <a href="index.html">Home</a> |
-        <a href="profil.html">Profil</a> |
-        <b>Blog</b> |
-        <a href="fakta.html">Fakta</a> |
-        <a href="about.html">About</a> |
-        Sejarah (Coming Soon)
-        </p>
-    </div>
-    <!-- <p>Kembali ke: <a href="index.html">Menu Utama</a></p> -->
-    <p>[Coming Soon]</p>
-    <br>
-    <a href="#home">Kembali ke awal</a>
-    <p>Terakhir diupdate: 20 Agustus 2023</p>
 </body>
 </html>
