--- a/index.html
+++ b/index.html
@@ -1,81 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Website Saya</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
 </head>
-<style>
-    body {
-        /* font-family:"Open Sans Black",sans-serif; */
-        /* font-family:"Segoe UI Medium",sans-serif; */
-        /* font-family:"Tahoma",sans-serif; */
-        /* font-family:"Source Sans Pro",sans-serif; */
-        /* font-family:"Georgia",sans-serif; */
-        /* font-family:"FreeSans",sans-serif; */
-        font-family:"Open Sans",sans-serif;
-        /* background-color: #d0e0f8; */
-        
-        background-image: url('images/dark-cubes-texture.jpg');
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-size: 100% 100%;
-        /* margin: 30px; */
-        margin: 0;
-    }
-    .top-container {
-        position: -webkit-sticky;
-        position: sticky;
-        top: 0;
-        background-color: #105090;
-        padding: 10px;
-    }
-    /* .margin-left */
-    .container {
-        /* margin-left: 30px; Sesuaikan dengan nilai yang diinginkan */
-        /* margin:0 auto; */
-        margin:0 auto; /* this will center the page */
-        width:80%; /*  use your width here */
-        background-color: #d0e0f8;
-        padding: 0 20px;
-    }
-    p {
-        font-size: 20px;
-        /* line-height: 1.5; */
-    }
-    li {
-        font-size: 20px;
-    }
-    a {
-        font-size: 20px;
-    }
-    a.button:link, a.button:visited {
-        background-color: #c8c8c8;
-        color: black;
-        padding: 5px 10px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        border: 1px solid #404040;
-        border-radius: 6px;
-    }
-    a.button:hover, a.button:active {
-        background-color: #b0b0b0;
-    }
-    img {
-        /* float: left; */
-        margin: 2px;
-    }
-    .box {
-        /* margin-block-start: 20px; */
-        background-color: #c4d0f4;
-        max-width: 1000px;
-        padding-left: 20px;
-        border: 2px solid black;
-        box-sizing: border-box;
-        border-radius: 6px;
-    }
-</style>
+<!-- <style></style> -->
 <body>
     <div class="top-container">
         <font size="6" color="white"><b>SEBUAH WEBSITE</b></font>
@@ -101,7 +32,7 @@
             <li><a href="https://devandaniel9-shape-program-devan-7zwso4.streamlit.app/">Bangun Datar dan Bangun Ruang</a> - Sudah ada Program Geometri</li>
         </ul>
         <!-- <p>Program baru: <b>Number Type Detection</b>, <b>Peluang</b> dan <b>Geometri</b></p> -->
-        <p>Program baru: <b>Fakta dan Informasi</b>, <b>Blog dan Cerita</b> dan <b>Equation Solver</b></p>
+        <p>Website baru: <b>Portofolio</b>, <b>Fakta dan Informasi</b>, dan <b>Blog dan Cerita</b></p>
         <p>Selain itu, ada juga link yang akan kita gunakan di masa depan nanti.</p>
         <p style="font-size:25px; color:#000080;"><b>Link yang akan datang:</b></p>
         <ul>
@@ -113,7 +44,6 @@
             <li>Pelajaran (HTML & Python)</li>
             <li>Bangun 3 Dimensi (Python)</li>
             <li>Labirin / Maze (HTML & Python)</li>
-            <li>Portofolio (HTML) - Mau dibuat</li>
             <li>Explore (HTML & Python)</li>
         </ul>
         <p style="font-size:25px; color:#000080;"><b>Link luar:</b></p>
@@ -121,28 +51,33 @@
             <li><a href="https://www.python.org/">Website Python</a> - Bisa Download Python!</li>
             <li><a href="https://www.geeksforgeeks.org/">Belajar Python</a></li>
             <li><a href="https://www.w3schools.com/">Belajar HTML</a></li>
-            <li><a href="https://www.wolframalpha.com/">Website Matematika</a> - Bisa menyelesaikan soalnya</li>
+            <li><a href="https://www.wolframalpha.com/">Website Matematika</a> - Aplikasi WolframAlpha, bisa menyelesaikan soalnya!</li>
         </ul>
         <p style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
         <div class="box">
             <p>
             Link halaman:<br>
             <!-- <b>Home</b> -->
+            <!-- <a class="button" href="blog.html">Blog</a> | -->
             <b>Home</b> |
-            <a class="button" href="profil.html">Profil</a> |
-            <a class="button" href="blog.html">Blog</a> |
-            <a class="button" href="fakta.html">Fakta</a> |
-            <a class="button" href="about.html">About</a> |
+            <a href="blog.html">Blog</a> |
+            <a href="fakta.html">Fakta</a> |
+            <a href="profil.html">Profil</a> |
+            <a href="portofolio.html">Portofolio</a> |
+            <a href="about.html">About</a> |
             Timeline (Coming Soon)
             </p>
         </div>
         <p>[Coming Soon]</p>
         <br>
         <a href="#home">Kembali ke awal</a>
-        <p>Terakhir diupdate: 25 Agustus 2023</p>
-        <p>Version: 1.6</p>
-        <p>Copyright © 2023 by Devan</p>
-        <br>
+        <br><br>
+        <!-- <footer style=""> -->
     </div>
+    <footer style="background-color:#404040; padding:20px; color:white;">
+        <p>Terakhir diupdate: 25 Agustus 2023</p>
+        <p>Version: 1.6.1</p>
+        <p>Copyright © 2023 by Devan</p>
+    </footer>
 </body>
 </html>
