--- a/fakta.html
+++ b/fakta.html
@@ -1,61 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Website Saya</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
 </head>
-<style>
-    body {
-        /* font-family:"Open Sans Black",sans-serif; */
-        /* font-family:"Segoe UI Medium",sans-serif; */
-        /* font-family:"Tahoma",sans-serif; */
-        /* font-family:"Source Sans Pro",sans-serif; */
-        /* font-family:"Georgia",sans-serif; */
-        /* font-family:"FreeSans",sans-serif; */
-        font-family:"Open Sans",sans-serif;
-        background-color: #e0e8ff;
-    }
-    p {
-        font-size: 20px
-    }
-    li {
-        font-size: 20px
-    }
-    a {
-        font-size: 20px
-    }
-    img {
-        /* float: left; */
-        margin: 2px;
-    }
-    .container {
-        /* margin-block-start: 20px; */
-        background-color: #c4d0f4;
-        max-width: 1000px;
-        padding-left: 20px;
-        border: 2px solid black;
-        box-sizing: border-box;
-    }
-</style>
 <body>
-    <font id="home" size="7" color="#146480"><b>Fakta dan Informasi</b></font>
-    <p>
-    [Under Construction]
-    </p>
-    <p style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
-    <div class="container">
-        <p>
-        Link halaman:<br>
-        <!-- <b>Home</b> -->
-        <a href="index.html">Home</a> |
-        <a href="profil.html">Profil</a> |
-        <a href="blog.html">Blog</a> |
-        <b>Fakta</b> |
-        <a href="about.html">About</a> |
-        Sejarah (Coming Soon)
-        </p>
+    <div class="top-container">
+        <font size="6" color="white"><b>SEBUAH WEBSITE</b></font>
     </div>
-    <br>
-    <a href="#home">Kembali ke awal</a>
-    <p>Terakhir diupdate: 20 Agustus 2023</p>
+    <div class="container">
+        <br>
+        <font id="home" size="7" color="#146480"><b>Fakta dan Informasi</b></font>
+        <p>
+        [Under Construction]
+        </p>
+        <p style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+        <div class="box">
+            <p>
+            Link halaman:<br>
+            <a href="index.html">Home</a> |
+            <a href="blog.html">Blog</a> |
+            <b>Fakta</b> |
+            <a href="profil.html">Profil</a> |
+            <a href="portofolio.html">Portofolio</a> |
+            <a href="about.html">About</a> |
+            Timeline (Coming Soon)
+            </p>
+        </div>
+        <br>
+        <a href="#home">Kembali ke awal</a>
+        <p>Terakhir diupdate: 25 Agustus 2023</p>
+        <br>
+    </div>
 </body>
 </html>
