--- a/profil.html
+++ b/profil.html
@@ -1,25 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Website Saya</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
 </head>
-<style>
-body{
-    font-family:"Roboto",sans-serif;
-}
-</style>
 <body>
-    <h1>Profil</h1>
-    <h3>Biodata</h3>
-    <p>Nama: *****</p>
-    <p>Tanggal lahir: **/**/****</p>
-    <h3>Kesukaan</h3>
-    <p>Buka aplikasi VS Code</p>
-    <p>Mengerjakan program</p>
-    <h3>Histori</h3>
-    <h3>Nama</h3>
-    <p>Username: dev*nd****l9</p>
-    <p>Kembali ke: <a href="index.html">Menu Utama</a></p>
-    <p>Terakhir diupdate: 28 April 2023</p>
+    <div class="top-container">
+        <font size="6" color="white"><b>SEBUAH WEBSITE</b></font>
+    </div>
+    <div class="container">
+        <br>
+        <font id="home" size="7" color="#1a7860"><b>PROFIL</b></font>
+        <p style="font-size:25px; color:#000080;"><b>Gambar</b></p>
+        <div class="image">
+            <img src="images/IMG_20200105_121417.jpg" width="150" style="border: 2px solid black; border-radius: 50%;">
+            <img src="images/Gambar Profil.jpg" width="150" style="border: 2px solid black; border-radius: 50%;">
+        </div>
+        <p style="font-size:25px; color:#000080;"><b>Biodata</b></p>
+        <p>Nama: D****</p>
+        <p>Tanggal lahir: **/**/****</p>
+        <p style="font-size:25px; color:#000080;"><b>Kesukaan</b></p>
+        <p>Buka aplikasi VS Code</p>
+        <p>Mengerjakan program</p>
+        <p>Suka pelajaran Matematika dan Bahasa Inggris</p>
+        <p style="font-size:25px; color:#000080;"><b>Histori</b></p>
+        <p style="font-size:25px; color:#000080;"><b>Nama</b></p>
+        <p>Username: dev*nd****l9</p>
+        <br>
+        <p style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+        <div class="box">
+            <p>
+            Link halaman:<br>
+            <a href="index.html">Home</a> |
+            <a href="blog.html">Blog</a> |
+            <a href="fakta.html">Fakta</a> |
+            <b>Profil</b> |
+            <a href="portofolio.html">Portofolio</a> |
+            <a href="about.html">About</a> |
+            Timeline (Coming Soon)
+            </p>
+        </div>
+        <!-- <p>Kembali ke: <a href="index.html">Menu Utama</a></p> -->
+        <p>[Coming Soon]</p>
+        <br>
+        <a href="#home">Kembali ke awal</a>
+        <p>Terakhir diupdate: 25 Agustus 2023</p>
+        <br>
+    </div>
 </body>
 </html>
