--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
         <br>
         <font id="home" size="7" color="#004080"><b>Website Devan</b></font>
         <p>
-        Beberapa Program yang sudah Devan buat selama ini. Kebanyakan program nya menggunakan python, beberapa program matematika.<br>
-        Sepertinya Devan sedang mencoba untuk membuat program HTML agar lebih mudah dan lengkap, untuk program Geometri tanpa streamlit.<br>
-        Agar linknya menjadi aktif kembali, maka harus sering aktif dan klik aktifkan<br>
-        Program yang saat ini bekerja adalah mengembangkan program equation solver untuk versi 1.5, juga untuk program geometri ke versi 1.6.
+        Ini adalah program yang sudah Devan kerjakan, jumlahnya ada 8.<br>
+        Semuanya berkaitan dengan Matematika dan program tersebut Devan kerjakan selama 3 tahun, selama Devan SMP.<br>
+        <br>
+        Devan memakai python dalam mengerjakan semua program tersebut.<br>
+        Selanjutnya, Devan sedang mencoba untuk membuat program HTML, agar lebih mudah dan lengkap.<br>
+        Begitu juga program Geometri, Devan mencoba tanpa memakai streamlit.<br>
+        <br>
+        Selain itu, ada 2 program yang saat ini Devan ingin kembangkan yaitu:<br>
+        - Program Equation Solver versi 5<br>
+        - Program Geometri versi 1.6
         </p>
         <p style="font-size:25px; color:#000080;"><b>Link program:</b></p>
         <ul>
@@ -74,10 +80,12 @@
         <br><br>
         <!-- <footer style=""> -->
     </div>
-    <footer style="background-color:#404040; padding:20px; color:white;">
-        <p>Terakhir diupdate: 25 Agustus 2023</p>
-        <p>Version: 1.6.1</p>
-        <p>Copyright © 2023 by Devan</p>
+    <footer style="background-color:#404040; padding:20px; color:white">
+        <p style="line-height:2;">
+        Terakhir diupdate: 26 Agustus 2023<br>
+        Version: 1.6.2<br>
+        Copyright © 2023 by Devan
+        </p>
     </footer>
 </body>
 </html>
