--- a/fakta.html
+++ b/fakta.html
@@ -14,9 +14,42 @@
         <br>
         <font id="home" size="7" color="#146480"><b>Fakta dan Informasi</b></font>
         <p>
-        [Under Construction]
+        Fakta dan Informasi adalah halaman yang berisi fakta untuk informasi yang berguna untuk kedepannya. Seperti fakta, cerita, berita, dan pembahasan.
         </p>
-        <p style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+        <p style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
+        <div class="box" style="max-width: 500px;">
+            <p>
+            1. <a href="#1">Bahasa Pemrograman</a><br>
+            2. <a href="#2">Bahasa AI</a><br>
+            3. <a href="#3">Matematika</a>
+            </p>
+        </div>
+        <br>
+        <p style="font-size:30px; color:#206044;"><u><b>ISI HALAMAN</b></u></p>
+        <p id="1" style="font-size: 25px"><b>1. Bahasa Pemrograman</b></p>
+        <div class="container2">
+            <img src="fakta/python.png" alt="Python" width="200">
+            <img src="fakta/html.png" alt="HTML" width="200">
+            <br><br>
+            <table>
+                <tr>
+                    <th>Month</th>
+                    <th>Savings</th>
+                </tr>
+                <tr>
+                    <td>January and February</td>
+                    <td>$100 and $200</td>
+                </tr>
+            </table>
+            <br>
+        </div>
+
+        <p id="2" style="font-size: 25px"><b>2. Bahasa AI</b></p>
+        <div class="container2">
+            <img src="fakta/openai-logo.jpg" alt="OpenAI" width="200">
+        </div>
+        <br>
+        <p style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
         <div class="box">
             <p>
             Link halaman:<br>
@@ -31,7 +64,7 @@
         </div>
         <br>
         <a href="#home">Kembali ke awal</a>
-        <p>Terakhir diupdate: 25 Agustus 2023</p>
+        <p>Terakhir diupdate: 26 Agustus 2023</p>
         <br>
     </div>
 </body>
