--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 <!-- <style></style> -->
 <body>
     <div class="top-container">
-        <font size="6" color="white"><b>SEBUAH WEBSITE</b></font>
+        <div class="dropdown" style="margin-right:20px; float:left;">
+            <button class="dropbtn">MENU</button>
+            <div class="dropdown-content">
+                <a href="blog.html">Blog</a>
+                <a href="fakta.html">Fakta</a>
+                <a href="profil.html">Profil</a>
+                <a href="portofolio.html">Portofolio</a>
+            </div>
+        </div>
+        <img src="images/blank-profile.jpg" width="40" style="border-radius: 50%; vertical-align:middle; margin-right:20px; float:left;">
+        <!-- <font size="6" color="white"><b>SEBUAH WEBSITE</b></font> -->
+        <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
+        <div class="clearfix"></div>
     </div>
     <div class="container">
         <br>
@@ -70,8 +82,10 @@
             <a href="fakta.html">Fakta</a> |
             <a href="profil.html">Profil</a> |
             <a href="portofolio.html">Portofolio</a> |
+            <a href="hasil-karya.html">Hasil Karya</a> |
             <a href="about.html">About</a> |
-            Timeline (Coming Soon)
+            Timeline |
+            Updates (Coming Soon)
             </p>
         </div>
         <p>[Coming Soon]</p>
@@ -82,8 +96,8 @@
     </div>
     <footer style="background-color:#404040; padding:20px; color:white">
         <p style="line-height:2;">
-        Terakhir diupdate: 26 Agustus 2023<br>
-        Version: 1.6.2<br>
+        Terakhir diupdate: 29 Agustus 2023<br>
+        Version: 1.6.3<br>
         Copyright © 2023 by Devan
         </p>
     </footer>
