--- a/blog.html
+++ b/blog.html
@@ -39,20 +39,21 @@
             <br>
             </p>
             <div class="image">
-                <img src="images/IMG_6228.JPG" width="300">
-                <img src="images/IMG_6168.JPG" width="300">
+                <div class="gallery" style="width:300px;">
+                    <img src="images/IMG_6228.JPG">
+                    <div class="desc">Gambar 1: Pegunungan</div>
+                </div>
+                <div class="gallery" style="width:300px;">
+                    <img src="images/IMG_6168.JPG" width="300">
+                    <div class="desc">Gambar 2: Matahari terbit / Sunrise</div>
+                </div>
+                <div class="clearfix"></div>
                 <!-- <details>
                     <summary>Klik disini</summary>
                 </details> -->
             </div>
             <!-- <div class="text"> -->
             <p>
-            <font color="#000080">
-            Gambar 1: Pegunungan
-            <br>
-            Gambar 2: Matahari terbit
-            </font>
-            <br><br>
             First, we departed from <font color="#008000">Semarang</font> to <b>Batu Malang</b> by car. Arriving there, we immediately rested at the hotel for a while and went to eat at the <b>Batu Malang</b> square.
             The next day we went to Jawa Timur Park 3, the place is nice and there are lots of interesting photo spots there.
             Miniatures of Japanese cities, Dutch cities, India and many more. After that we returned to the hotel to rest for a while because at dawn we had to prepare for Bromo.
@@ -68,9 +69,13 @@
             <b>Catatan:</b><br>
             <!-- <ul><li> -->
             - Batu Malang: Kota di Jawa Timur<br>
-            - Kata Coach di Eagle School, nanti akan berencana untuk retreat ke luar kota, dimana nanti akan pergi ke <b>Batu Malang</b>.
-            </p>
+            - Kata Coach di Eagle School, nanti akan berencana untuk retreat ke <b>Batu Malang</b>, untuk karya wisata.<br>
             <br>
+            <b>Link:</b><br>
+            * <a href="https://id.wikipedia.org/wiki/Jawa_Timur">Wikipedia - Jawa Timur</a><br>
+            <br>
+            </p>
+
         </div>
         <p id="2" style="font-size: 25px"><b>2. About Me Devan - Descriptive Text</b></p>
         <div class="container2">
@@ -143,7 +148,7 @@
         <!-- <p>Kembali ke: <a href="index.html">Menu Utama</a></p> -->
         <br>
         <a href="#home">Kembali ke awal</a>
-        <p>Terakhir diupdate: 25 Agustus 2023</p>
+        <p>Terakhir diupdate: 29 Agustus 2023</p>
         <br>
     </div>
 </body>
